--- a/style.css
+++ b/style.css
@@ -33,3 +33,22 @@ body{
 .container .name h5{
     font-size: 20px;
 }
+
+.form{
+    text-align: center;
+    width: 40%;
+    margin: 0 auto;
+}
+
+.form input{
+    width: 50%;
+}
+
+.form button{
+    width: 15%;
+}
+
+#about p{
+    max-width: 600px;
+    margin: 0 auto;
+}
