--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -6,86 +6,113 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
-ul{
+ul {
     list-style: none;
     font-style: italic;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-body{
-    background-size: 100vw;
+body {
+    background-size: 100%;
     background-image: url(img/pexels-pixabay-257894.jpg);
     background-repeat: no-repeat;
     background-position: center center fixed;
+    background-size: cover;
 }
 
-#logo{
-    max-width:40%;
-    max-height:40%;
+#logo {
+    max-width: 40%;
+    max-height: 40%;
     width: auto;
     height: auto;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 10px;
     box-shadow: 1px 1px 10px 1px #225345;
+    margin-bottom: 45px;
 }
 
-header ul{
+header ul {
     display: flex;
 }
 
-header ul li{
+header ul li {
     padding: 5px;
 }
 
-header ul li{
+header ul li {
     padding: 5px;
 }
 
-header ul li a{
+header ul li a {
     transition: 500ms;
 }
 
-header ul li a:hover{
+header ul li a:hover {
     font-size: 20px;
     color: #77a89a;
 }
 
-.container{
+.container {
     text-align: center;
 }
 
-.container .name h1{
+.container .name h1 {
     font-size: 44px;
     padding: 5px;
 }
 
-.container .name h5{
+.container .name h5 {
     font-size: 20px;
 }
 
-.form{
+#arrow {
+    font-size: 36px;
+    cursor: pointer;
+    animation: blink 1s steps(5, start) infinite;
+}
+
+@keyframes blink {
+    to {
+        visibility: hidden;
+    }
+}
+
+.rotate {
+    transform: rotate(180deg);
+    transition: 300ms;
+}
+
+.active {
+    display: block !important;
+}
+
+#animation {
+    transition: 300ms;
+}
+
+.form {
     text-align: center;
     width: 40%;
     margin: 0 auto;
 }
 
-.form input{
+.form input {
     width: 50%;
     padding: 5px 10px;
     border: none;
     border-radius: 5px 0px 0px 5px;
 }
 
-.form button{
-    width: 15%;
+.form button {
+    width: 30%;
     padding: 5px 10px;
     border: none;
     border-radius: 0px 5px 5px 0px;
@@ -97,15 +124,60 @@ header ul li a:hover{
     border: none;
     cursor: pointer;
     margin-top: 20px;
-    margin-left: -4px;
+    margin-left: -8px;
     transition: all 500ms ease-out;
 }
 
-.form button:hover{
+.form button:hover {
     background-position: left bottom;
 }
 
-#about p{
+#about p {
     max-width: 600px;
     margin: 0 auto;
+}
+
+@media only screen and (max-width: 740px) {
+    body {
+        background-position: center center;
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
+    .form {
+        width: 100%;
+    }
+
+    .form button {
+        width: 20%;
+    }
+
+
+    #about p {
+        max-width: 80%;
+        text-align: justify;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    body {
+        background-size: 300%;
+        background-position: center center;
+
+        background-attachment: fixed;
+        background-size: cover;
+    }
+
+    .container .name h1 {
+        font-size: 30px;
+    }
+
+    .container .name h5 {
+        font-size: 15px;
+    }
+
+    #about p {
+        max-width: 80%;
+        text-align: justify;
+    }
 }
